<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/title"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/boi_tinh_duyen"
        android:textColor="@color/text_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="100dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/descrip_tinhduyen"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/layout_row"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/label_name"
                                android:textColor="@android:color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/nameMen"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:background="@drawable/title"
                                android:gravity="center_vertical"
                                android:hint="@string/three_dot"
                                android:inputType="text"
                                android:paddingLeft="10dp"
                                android:textColor="@color/text_title"
                                android:textColorHint="@color/text_title" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/label_birthDay"
                                android:textColor="@android:color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/birthDayMen"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="2"
                                    android:background="@drawable/title"
                                    android:clickable="false"
                                    android:enabled="false"
                                    android:gravity="center_vertical"
                                    android:hint="@string/three_dot"
                                    android:paddingLeft="10dp"
                                    android:textColor="@color/text_title"
                                    android:textColorHint="@android:color/white" />

                                <ImageButton
                                    android:id="@+id/imageButton1"
                                    android:layout_width="33dp"
                                    android:layout_height="35dp"
                                    android:layout_margin="2dp"
                                    android:background="@drawable/calendar_icon"
                                    android:contentDescription="@string/hello_world" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/shape_title_layout"
                        android:padding="5dp"
                        android:text="@string/gender1"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@drawable/layout_row"
                        android:orientation="vertical"
                        android:padding="5dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/label_name"
                                android:textColor="@android:color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/nameWomen"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:background="@drawable/title"
                                android:gravity="center_vertical"
                                android:hint="@string/three_dot"
                                android:inputType="text"
                                android:paddingLeft="10dp"
                                android:textColor="@color/text_title"
                                android:textColorHint="@color/text_title" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:layout_marginBottom="10dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/label_birthDay"
                                android:textColor="@android:color/white"
                                android:textSize="15sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="2"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/birthDayWomen"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:background="@drawable/title"
                                    android:clickable="false"
                                    android:enabled="false"
                                    android:gravity="center_vertical"
                                    android:hint="@string/three_dot"
                                    android:paddingLeft="10dp"
                                    android:textColor="@color/text_title"
                                    android:textColorHint="@color/text_title" />

                                <ImageButton
                                    android:id="@+id/imageButton2"
                                    android:layout_width="35dp"
                                    android:layout_height="35dp"
                                    android:layout_margin="2dp"
                                    android:background="@drawable/calendar_icon"
                                    android:contentDescription="@string/hello_world" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/shape_title_layout"
                        android:padding="5dp"
                        android:text="@string/gender2"
                        android:textColor="@android:color/white"
                        android:textSize="13sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <Button
                        android:id="@+id/btn_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/selector_btn"
                        android:text="@string/btn_result"
                        android:textColor="@android:color/white" />
                </FrameLayout>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</LinearLayout>